Implemented hidden flags.

--- a/src/gflags.h.in
+++ b/src/gflags.h.in
@@ -169,6 +169,7 @@ struct CommandLineFlagInfo {
   std::string current_value;   // the current value, as a string
   std::string default_value;   // the default value, as a string
   std::string filename;        // 'cleaned' version of filename holding the flag
+  bool hidden;                 // true if the flag is hidden
   bool has_validator_fn;       // true if RegisterFlagValidator called on this flag
   bool is_default;             // true if the flag has the default value and
                                // has not been set explicitly from the cmdline
@@ -447,7 +448,7 @@ class GFLAGS_DLL_DECL FlagRegisterer {
   // Calling this constructor with unsupported type will produce linker error.
   template <typename FlagType>
   FlagRegisterer(const char* name,
-                 const char* help, const char* filename,
+                 const char* help, const char* filename, bool hidden,
                  FlagType* current_storage, FlagType* defvalue_storage);
 };
 
@@ -483,14 +484,14 @@ extern GFLAGS_DLL_DECL const char kStrippedFlagHelp[];
 // FLAGS_no<name>.  This serves the second purpose of assuring a
 // compile error if someone tries to define a flag named no<name>
 // which is illegal (--foo and --nofoo both affect the "foo" flag).
-#define DEFINE_VARIABLE(type, shorttype, name, value, help)             \
+#define DEFINE_VARIABLE(type, shorttype, name, value, help, hidden)     \
   namespace fL##shorttype {                                             \
     static const type FLAGS_nono##name = value;                         \
     /* We always want to export defined variables, dll or no */         \
     GFLAGS_DLL_DEFINE_FLAG type FLAGS_##name = FLAGS_nono##name;        \
     type FLAGS_no##name = FLAGS_nono##name;                             \
     static GFLAGS_NAMESPACE::FlagRegisterer o_##name(                   \
-      #name, MAYBE_STRIPPED_HELP(help), __FILE__,                       \
+      #name, MAYBE_STRIPPED_HELP(help), __FILE__, hidden,               \
       &FLAGS_##name, &FLAGS_no##name);                                  \
   }                                                                     \
   using fL##shorttype::FLAGS_##name
@@ -519,26 +520,55 @@ GFLAGS_DLL_DECL bool IsBoolFlag(bool from);
     typedef ::fLB::CompileAssert FLAG_##name##_value_is_not_a_bool[     \
             (sizeof(::fLB::IsBoolFlag(val)) != sizeof(double))? 1: -1]; \
   }                                                                     \
-  DEFINE_VARIABLE(bool, B, name, val, txt)
+  DEFINE_VARIABLE(bool, B, name, val, txt, false)
 
 #define DEFINE_int32(name, val, txt) \
    DEFINE_VARIABLE(GFLAGS_NAMESPACE::int32, I, \
-                   name, val, txt)
+                   name, val, txt, false)
 
 #define DEFINE_uint32(name,val, txt) \
    DEFINE_VARIABLE(GFLAGS_NAMESPACE::uint32, U, \
-                   name, val, txt)
+                   name, val, txt, false)
 
 #define DEFINE_int64(name, val, txt) \
    DEFINE_VARIABLE(GFLAGS_NAMESPACE::int64, I64, \
-                   name, val, txt)
+                   name, val, txt, false)
 
 #define DEFINE_uint64(name,val, txt) \
    DEFINE_VARIABLE(GFLAGS_NAMESPACE::uint64, U64, \
-                   name, val, txt)
+                   name, val, txt, false)
 
 #define DEFINE_double(name, val, txt) \
-   DEFINE_VARIABLE(double, D, name, val, txt)
+   DEFINE_VARIABLE(double, D, name, val, txt, false)
+
+// Here are the actual hidden DEFINE_*-macros.
+// The respective DECLARE_*-macros are the same used when DEFINE-ing
+// a non hidden flag.
+#define DEFINE_HIDDEN_bool(name, val, txt)                              \
+  namespace fLB {                                                       \
+    typedef ::fLB::CompileAssert FLAG_##name##_value_is_not_a_bool[     \
+            (sizeof(::fLB::IsBoolFlag(val)) != sizeof(double))? 1: -1]; \
+  }                                                                     \
+  DEFINE_VARIABLE(bool, B, name, val, txt, true)
+
+#define DEFINE_HIDDEN_int32(name, val, txt) \
+   DEFINE_VARIABLE(GFLAGS_NAMESPACE::int32, I, \
+                   name, val, txt, true)
+
+#define DEFINE_HIDDEN_uint32(name,val, txt) \
+   DEFINE_VARIABLE(GFLAGS_NAMESPACE::uint32, U, \
+                   name, val, txt, true)
+
+#define DEFINE_HIDDEN_int64(name, val, txt) \
+   DEFINE_VARIABLE(GFLAGS_NAMESPACE::int64, I64, \
+                   name, val, txt, true)
+
+#define DEFINE_HIDDEN_uint64(name,val, txt) \
+   DEFINE_VARIABLE(GFLAGS_NAMESPACE::uint64, U64, \
+                   name, val, txt, true)
+
+#define DEFINE_HIDDEN_double(name, val, txt) \
+   DEFINE_VARIABLE(double, D, name, val, txt, true)
 
 // Strings are trickier, because they're not a POD, so we can't
 // construct them at static-initialization time (instead they get
@@ -597,7 +627,26 @@ public:
                                    dont_pass0toDEFINE_string(s_##name[0].s, \
                                                              val);          \
     static GFLAGS_NAMESPACE::FlagRegisterer o_##name(                       \
-        #name, MAYBE_STRIPPED_HELP(txt), __FILE__,                          \
+        #name, MAYBE_STRIPPED_HELP(txt), __FILE__, false,                   \
+        FLAGS_no##name, new (s_##name[1].s) clstring(*FLAGS_no##name));     \
+    static StringFlagDestructor d_##name(s_##name[0].s, s_##name[1].s);     \
+    extern GFLAGS_DLL_DEFINE_FLAG clstring& FLAGS_##name;                   \
+    using fLS::FLAGS_##name;                                                \
+    clstring& FLAGS_##name = *FLAGS_no##name;                               \
+  }                                                                         \
+  using fLS::FLAGS_##name
+
+// Hidden string define
+#define DEFINE_HIDDEN_string(name, val, txt)                                \
+  namespace fLS {                                                           \
+    using ::fLS::clstring;                                                  \
+    using ::fLS::StringFlagDestructor;                                      \
+    static union { void* align; char s[sizeof(clstring)]; } s_##name[2];    \
+    clstring* const FLAGS_no##name = ::fLS::                                \
+                                   dont_pass0toDEFINE_string(s_##name[0].s, \
+                                                             val);          \
+    static GFLAGS_NAMESPACE::FlagRegisterer o_##name(                       \
+        #name, MAYBE_STRIPPED_HELP(txt), __FILE__, true,                    \
         FLAGS_no##name, new (s_##name[1].s) clstring(*FLAGS_no##name));     \
     static StringFlagDestructor d_##name(s_##name[0].s, s_##name[1].s);     \
     extern GFLAGS_DLL_DEFINE_FLAG clstring& FLAGS_##name;                   \
